fix:(393px gap)

--- a/src/public/css/newHeader.css
+++ b/src/public/css/newHeader.css
@@ -830,7 +830,7 @@
 @media screen and (max-width: 393px) {
     .buttons_redesign {
         width: 90px;
-        gap: 15px;
+        gap: 22px;
         width: 50px;
         /*border: 1px green solid;*/
         margin-left: 46px;
